# 3DINTACT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
applications/app-01-procam-register-surface/: reproject.cpp
apps/: CMakeLists.txt
apps/mobile-device-interaction/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/Ex-2__print-pointcloud-segment/: main.cpp
examples/Ex-3__print-pointcloud-clusters/: main.cpp
examples/Ex-5__find-vacant-tabletop-surface-space/: main.cpp
examples/Ex-7__2D-detect-tabletop-objects/: CMakeLists.txt  main.cpp
examples/Ex-8__chromakey-vacant-tabletop-surface-space/: CMakeLists.txt  main.cpp
examples/chroma/: CMakeLists.txt  main.cpp
examples/chromakeying/: CMakeLists.txt  main.cpp
examples/cluster-use/: CMakeLists.txt  main.cpp
examples/example-01-show-pointcloud/: CMakeLists.txt  pcloud.cpp
examples/example-02-show-syncd-depth-image/: CMakeLists.txt  dimage.cpp
examples/example-03-segment-pcloud/: CMakeLists.txt
examples/example-04-cluster-pcloud/: CMakeLists.txt
examples/example-05-vacant-surface/: CMakeLists.txt  main.cpp
examples/example-06-chromakey/: CMakeLists.txt
examples/example-07-3D-render/: CMakeLists.txt
examples/example-08-detect-objects/: CMakeLists.txt  objects.cpp
examples/example-09-find-epsilon/: CMakeLists.txt
examples/example-10-map-detected-objects/: CMakeLists.txt
examples/object-detection/: CMakeLists.txt  main.cpp
examples/old/Ex-2__print-pointcloud-segment/: main.cpp
examples/old/Ex-3__print-pointcloud-clusters/: main.cpp
examples/old/Ex-4__find-epsilon-helper/: main.cpp
examples/old/Ex-5__find-vacant-tabletop-surface-space/: main.cpp
examples/old/Ex-6__3D-render-tabletop-environment/: main.cpp
examples/old/Ex-7__2D-detect-tabletop-objects/: main.cpp
examples/old/Ex-8__chromakey-vacant-tabletop-surface-space/: main.cpp
examples/viewer/: CMakeLists.txt  main.cpp
include/: dbscan.h  io.h  kdtreeknn.h  knn.h  point.h  point3d.h  timer.h
libs/grow/: grow.cpp  grow.h
libs/scene/include/: scene.h
libs/surface/src/: surface.cpp
libs/utility/include/: io.h
libs/viewer/include/: renderer.h
libs/viewer/src/: renderer.cpp
output/: context.ply  reduction.csv  runtime.csv  tabletop.ply
resources/: pcl.ply  surface.ply
scripts/: build-project.sh  build_3dintac_toolkit.sh  build_kinect_sdk.sh  example_01.sh  example_02.sh  execute_3dintact.sh  graph.py  initialize_azure_kinect_sensor_sdk.sh  install_depthengine.sh  install_kinect_sdk_dependencies.sh  install_usb_rules.sh  run_chromakey_vacant_tabletop_surface_space_example.sh  run_chromakeying_example.sh  run_cluster_use_example.sh  run_i3d.sh  run_mobile_device_interaction_application.sh  run_object_detection_example.sh  run_print_pointcloud_clusters_example.sh  run_viewerexample.sh  test.sh
scripts/setup-azure-kinect/: README.md  build-project.sh  install-depthengine.sh  install-project-dependencies.sh  install-usb-rules.sh
src/: dbscan.cpp  helpers.hpp  io.cpp  knn.cpp  main.cpp  point.cpp  timer.cpp  utility.hpp  workers.h
