add_subdirectory(example-01-show-pointcloud)
add_subdirectory(example-02-show-syncd-depth-image)
add_subdirectory(example-03-segment-pcloud)
# add_subdirectory(example-04-cluster-pcloud)
# add_subdirectory(example-05-vacant-surface)

# add_subdirectory(Ex-2__print-pointcloud-segment)
# add_subdirectory(Ex-3__print-pointcloud-clusters)
# add_subdirectory(Ex-4__find-epsilon-helper)
# add_subdirectory(Ex-5__find-vacant-tabletop-surface-space)
# add_subdirectory(Ex-6__3D-render-tabletop-environment)
# add_subdirectory(Ex-7__2D-detect-tabletop-objects)
# add_subdirectory(Ex-8__chromakey-vacant-tabletop-surface-space)
